--- a/app/assets/stylesheets/salons/search.scss
+++ b/app/assets/stylesheets/salons/search.scss
@@ -11,6 +11,14 @@
     }
     &__main {
       width: 72%;
+      &__count {
+        text-align: end;
+        margin: 0 1rem 1rem 1rem;
+        font-size: 1.5rem;
+        span {
+          font-size:0.8rem;
+        }
+      }
       &__salons {
 
       }
