--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,88 +1,3 @@
-.user-show
-  .user-show__leftbox.col-4
-    .user-show__leftbox__icon
-      - if @user.icon.url.present?
-        = image_tag @user.icon.url
-      - else
-        = image_tag 'egg-icon-gray.png'
-    .user-show__leftbox__btn.col-12
-      - if user_signed_in?
-        - if current_user.id == @user.id
-          %button{type: "button", class: "btn btn-primary", id: "user-edit"}
-            = link_to '編集', edit_user_path(current_user)
-        - else
-          - if current_user.following? @user
-            %button{type: "button", class: "btn btn-primary", id: "unfollow"}
-              = link_to "フォロー中", {controller: :users,action: :unfollow,user_id: @user.id}, method: :put
-          - else
-            %button{type: "button", class: "btn btn-primary", id: "follow"}
-              = link_to "フォローする", {controller: :users,action: :follow,user_id: @user.id}, method: :put
-    .user-show__leftbox__count
-      = link_to "/users/follow_list/#{@user.id}", class: 'user__leftbox__count__follow' do
-        フォロー
-        = @user.follow_count
-      = link_to "/users/follower_list/#{@user.id}", class: 'user__leftbox__count__follower' do
-        フォロワー
-        = @user.followers_count
-  .user-show__rightbox.col-8
-    .user-show__rightbox__top
-      .user-show__rightbox__top__name
-        = @user.name
-      .user-show__rightbox__top__contents
-        .user-show__rightbox__top__contents__id
-          @#{@user.acountid}
-        .user-show__rightbox__top__contents__gender
-          - case @user.gender_id
-          - when 1
-            Women
-          - when 2
-            Men
-          - when 3
-            free
-        - if @user.salon
-          = link_to salon_path(@user.salon), class: 'user__rightbox__top__contents__salon' do
-            = salon_name(@user.salon)
-        - else
-          未登録
-      .user-show__rightbox__top__message
-        - if user_signed_in? && current_user.id != @user.id
-          = form_with(url: rooms_path, local: true) do |f|
-            = f.hidden_field :user_id, value: @user.id
-            = f.label 'dmEnvelope' do
-              = icon 'far', 'envelope'
-              = f.submit id: 'dmEnvelope', style: 'display:none;'
-    .user-show__rightbox__bottom
-      .user-show__rightbox__bottom__introduction
-        = @user.introduction
-
-.tab
-  %ul.nav.nav-pills.nav-justified
-    %li.userpagelist.styles.col-2.active
-      %a{"data-toggle": "tab", href:"#sampleContentA", class: "userpagetab active"}
-        %text
-          スタイル
-    %li.col-2
-      %a{"data-toggle": "tab", href: "#sampleContentC"}
-    %li.col-2
-      %a{"data-toggle": "tab", href: "#sampleContentD"}
-    %li.col-2
-      %a{"data-toggle": "tab", href: "#sampleContentD"}
-    %li.col-2
-      %a{"data-toggle": "tab", href: "#sampleContentE"}
-    %li.userpagelist.favorites.col-2
-      %a{"data-toggle": "tab", href: "#sampleContentF", class: "userpagetab"}
-        %text
-          お気に入り
-
-.tab-content.user-contents
-  #sampleContentA.tab-pane.active.user-contents__posts
-    .user-contents__index
-      = render @posts
-  #sampleContentF.tab-pane.user-contents__favorites
-    .user-contents__index
-      - @user.favorited_posts.each do |post|
-        = render partial: "posts/post", locals: { post: post}
-  -# #sampleContentC.tab-pane
-  -#   %p メニューＣの内容
-  -# #sampleContentD.tab-pane
-  -#   %p メニューＤの内容
+= render partial: 'user-head', locals: { user: @user}
+.user-posts
+  = render partial: 'posts/post', collection: @posts
