--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -14,13 +14,9 @@
             .show__header__user__left__contents__else__id
               @#{@post.user.acountid}
             .show__header__user__left__contents__else__gender
-              - case @post.user.gender_id
-              - when 1
-                Women
-              - when 2
-                Men
-              - when 3
-                Free
+              - if @post.user.gender
+                |
+                = @post.user.gender.name
             - if @post.user.salon
               = link_to salon_path(@post.user.salon), class: 'show__header__user__left__contents__else__salon' do
                 = salon_name(@post.user.salon)
