--- a/app/views/salons/search.html.haml
+++ b/app/views/salons/search.html.haml
@@ -2,14 +2,31 @@
   .salon-search__head.individual-page__head
     .salon-search__head__contents.individual-page__head__contents
       = icon 'fas', 'store-alt', class: ''
-      %span サロン一覧
+      - if @keyword && @area
+        %span #{@area.name},『 #{@keyword} 』 の検索結果
+      - elsif @keyword
+        #{@keyword} の検索結果
+      - elsif @area
+        #{@area.name} の検索結果
+      - else
+        %span サロン一覧
   .salon-search__contents
-    = render 'shared/searchbox'
+    = render 'shared/searchbox' do
+      .salon-search__contents
+        エリア
     .salon-search__contents__main
       .salon-search__contents__main__count
-        = @salonsallcount
+        - if @searchedsalons
+          = @searchedSalonsCount
+        - else
+          = @salonsallcount
         %span 件
       .salons
-        = render @salons
-      
-      = paginate @salons
+        - if @searchedsalons
+          = render partial: "salon", collection: @searchedsalons, as: "salon" 
+        - else
+          = render @salons
+      - if @searchedsalons
+        = paginate @searchedsalons
+      - else
+        = paginate @salons
