--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -1,7 +1,7 @@
 .user
   .user__leftbox
     .user__leftbox__icon
-      - if user.icon.url.present?
+      - if user.icon.present?
         = image_tag user.icon.url
       - else
         = image_tag 'egg-icon-gray.png'
