--- a/app/views/salons/show.html.haml
+++ b/app/views/salons/show.html.haml
@@ -3,7 +3,7 @@
     .salon-show__head__contents.individual-page__head__contents
       %span #{@salon.name}
   .salon-show__contents
-    = render 'shared/searchbox'
+    = render 'shared/salonsearchbox'
     .salon-show__contents__main
       .salon-show__contents__main__top
         .salon-show__contents__main__top__image
