--- a/app/views/items/search.html.haml
+++ b/app/views/items/search.html.haml
@@ -3,23 +3,32 @@
     .item-search__head__contents.individual-page__head__contents
       .item-search-icon
         = image_tag 'wax.png'
-      %span アイテム一覧
+        - if @brandkeyword || @genre || @keyword
+          %span
+            - if @brandkeyword
+              『 #{@brandkeyword} 』,
+            - if @genre
+              #{@genre.name},
+            - if @keyword
+              『 #{@keyword} 』
+            の検索結果
+        - else
+          %span アイテム一覧
   .item-search__contents
-    = render 'shared/searchbox'
+    = render 'shared/itemsearchbox'
     .item-search__contents__main
       .item-search__contents__main__count
-        = @itemsallcount
+        - if @searchedItemsCount
+          = @searchedItemsCount
+        - else
+          = @itemsallcount
         %span 件
       .item-search__contents__main__items
-        - @items.each do |item|
-          .item-search__contents__main__items__item
-            .item-search__contents__main__items__item__img
-              - if item.image_url == "?target=70x70" 
-                = image_tag 'noimage.jpeg', size: '70x70'
-              - else
-                = image_tag item.image_url
-            .item-search__contents__main__items__item__brand
-              = item.brand.name
-            .item-search__contents__main__items__item__name
-              = item.name
-      = paginate @items
+        - if @searcheditems
+          = render partial: "item", collection: @searcheditems, as: "item" 
+        - else
+          = render @items
+      - if @searcheditems
+        = paginate @searcheditems
+      - else    
+        = paginate @items
