post-search-create

--- a/app/assets/stylesheets/posts/search.scss
+++ b/app/assets/stylesheets/posts/search.scss
@@ -2,6 +2,7 @@
   &__contents {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
     padding: 3rem 0;
     &__main {
       width: 72%;
