--- a/app/views/posts/search.html.haml
+++ b/app/views/posts/search.html.haml
@@ -4,7 +4,7 @@
       = icon 'fas', 'camera-retro', class: 'search-icon'
       %span スタイル一覧
   .post-search__contents
-    = render 'shared/searchbox'
+    = render 'shared/postsearchbox'
     .post-search__contents__main
       .post-search__contents__main__counts
         = @postsallcount
