--- a/app/views/shared/_itemsearchbox.html.haml
+++ b/app/views/shared/_itemsearchbox.html.haml
@@ -21,6 +21,6 @@
     .searchbox__form__title
       キーワード検索
     .searchbox__form__search
-      = f.search_field :keyword_search, name: "keyword", placeholder: "サロンを探す", class: "searchbox__form__search", autocomplete: "off"
+      = f.search_field :keyword_search, name: "keyword", placeholder: "アイテムを探す", class: "searchbox__form__search", autocomplete: "off"
     .searchbox__form__input
       = f.submit "検索する"
