--- a/app/views/shared/_salonsearchbox.html.haml
+++ b/app/views/shared/_salonsearchbox.html.haml
@@ -11,7 +11,7 @@
           - Area.all.each do |area|
             .searchbox__form__select__list__contents__content{data: {id: area.id}}
               = area.name
-    .searchbox__form__selected
+    .searchbox__form__selected.form-selected
     .searchbox__form__title
       キーワード検索
     .searchbox__form__search
