--- a/app/views/shared/_itemsearchbox.html.haml
+++ b/app/views/shared/_itemsearchbox.html.haml
@@ -17,7 +17,7 @@
           - Genre.all.each do |genre|
             .searchbox__form__select__list__contents__content{data: {id: genre.id}}
               = genre.name
-    .searchbox__form__selected
+    .searchbox__form__selected.form-selected
     .searchbox__form__title
       キーワード検索
     .searchbox__form__search
