--- a/app/assets/stylesheets/shared/_searchbox.scss
+++ b/app/assets/stylesheets/shared/_searchbox.scss
@@ -141,6 +141,19 @@
           cursor: pointer;
         }
       }
+      #item-search-result {
+        // width: 100%;
+        font-size: 0.4rem;
+        border-left: solid 1px #ccc;
+        border-right: solid 1px #ccc;
+        background-color: #fff;
+        .post-result-item__name {
+          padding: 0.5rem;
+          margin: 0;
+          border-bottom: solid 1px #ccc;
+          cursor: pointer;
+        }
+      }
     }
     &__input {
       margin-top: 2rem;
