--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -8,3 +8,4 @@
     = item.brand.name
   .item-search__contents__main__items__item__name
     = item.name
+  = link_to '購入はこちら', item.link, class:"item-search__contents__main__items__item__name"
