--- a/app/views/users/search.html.haml
+++ b/app/views/users/search.html.haml
@@ -4,7 +4,7 @@
       = icon 'fas', 'store-alt', class: ''
       %span ユーザ一覧
   .user-search__contents
-    = render 'shared/searchbox'
+    = render 'shared/usersearchbox'
     .user-search__contents__main
       .user-search__contents__main__count
         = @usersallcount
