--- a/app/views/shared/_postsearchbox.html.haml
+++ b/app/views/shared/_postsearchbox.html.haml
@@ -8,8 +8,20 @@
     .searchbox__form__select
       %span Length
       = icon "fas", "chevron-right"
+      = f.hidden_field :length_id, value: '', id: 'length_id'
       .searchbox__form__select__list
-        .searchbox__form__select__list__contents
+        %span#nogender 性別を選択してください
+        .searchbox__form__select__list__contents#Women-contents
+          %span Women
+          - length_select(1).each do |length|
+            .searchbox__form__select__list__contents__content.length-content{data: {id: length.id}}
+              = length.name
+        .searchbox__form__select__list__contents#Men-contents
+          %span Men
+          - length_select(2).each do |length|
+            .searchbox__form__select__list__contents__content.length-content{data: {id: length.id}}
+              = length.name
+    .searchbox__form__length-selected.form-selected
     .searchbox__form__title
       年齢
     .searchbox__form__age
@@ -24,7 +36,7 @@
       .searchbox__form__select__list
         .searchbox__form__select__list__contents
           - Area.all.each do |area|
-            .searchbox__form__select__list__contents__content{data: {id: area.id}}
+            .searchbox__form__select__list__contents__content.area-content{data: {id: area.id}}
               = area.name
     .searchbox__form__selected.form-selected
     .searchbox__form__search
