--- a/app/views/posts/search.html.haml
+++ b/app/views/posts/search.html.haml
@@ -7,6 +7,8 @@
           - if @genders
             - @genders.each do |gender|
               #{gender.name},
+          - if @length
+            #{@length.name},
           - if @minage
             #{@minage}才〜,
           - if @maxage
