--- a/app/views/posts/search.html.haml
+++ b/app/views/posts/search.html.haml
@@ -2,7 +2,7 @@
   .post-search__head.individual-page__head
     .post-search__head__contents.individual-page__head__contents
       = icon 'fas', 'camera-retro', class: 'search-icon'
-      - if @genders || @minage || @maxage || @salon || @item || @keyword
+      - if @genders || @length || @minage || @maxage || @salon || @item || @keyword
         %span
           - if @genders
             - @genders.each do |gender|
