--- a/app/views/users/search.html.haml
+++ b/app/views/users/search.html.haml
@@ -2,12 +2,31 @@
   .user-search__head.individual-page__head
     .user-search__head__contents.individual-page__head__contents
       = icon 'fas', 'store-alt', class: ''
-      %span ユーザ一覧
+      - if @genders || @length || @minage || @maxage || @salon || @keyword
+        %span
+          - if @genders
+            - @genders.each do |gender|
+              #{gender.name},
+          - if @length
+            #{@length.name},
+          - if @minage
+            #{@minage}才〜,
+          - if @maxage
+            〜#{@maxage}才,
+          - if @salon
+            #{@salon.name},
+          - if @item
+            #{@item.name},
+          - if @keyword
+            『 #{@keyword} 』
+          の検索結果
+      - else
+        %span ユーザ一覧
   .user-search__contents
     = render 'shared/usersearchbox'
     .user-search__contents__main
       .user-search__contents__main__count
-        = @usersallcount
+        = @usersCount
         %span 件
       .user-search__contents__main__users
         = render @users            
