user-destoroy-Adjustment

--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -4,31 +4,48 @@
     = render 'rooms'
   .direct-message__show
     .direct-message__show__user
-      .direct-message__show__user__name
-        = partner(@room).name
-      .direct-message__show__user__acountid
-        @#{partner(@room).acountid}
+      - if partner(@room)
+        .direct-message__show__user__name
+          = partner(@room).name
+        .direct-message__show__user__acountid
+          @#{partner(@room).acountid}
+      - else
+        .direct-message__show__user__name
+          退会したユーザー
     .direct-message__show__messages
       - @room.messages.each do |message|
-        - if partner(@room).id == message.user_id
+        - if partner(@room)
+          - if partner(@room).id == message.user_id
+            .partner
+              .direct-message__show__messages__message
+                .direct-message__show__messages__message__icon
+                  = link_to user_path(partner(@room)) do
+                    - if partner(@room).icon.url.present?
+                      = image_tag partner(@room).icon.url
+                    - else
+                      = image_tag 'egg-icon-gray.png'
+                .direct-message__show__messages__message__contents
+                  - if message.body.present?
+                    = simple_format(message.body) 
+                  - if message.image.present?
+                    = image_tag message.image.url
+              .direct-message__show__messages__date
+                = message.created_at
+          - else
+            .own-message
+              .direct-message__show__messages__message
+                .direct-message__show__messages__message__contents
+                  - if message.body.present?
+                    = simple_format(message.body) 
+                  - if message.image.present?
+                    = image_tag message.image.url
+              .direct-message__show__messages__date
+                = message.created_at
+        - else
           .partner
             .direct-message__show__messages__message
               .direct-message__show__messages__message__icon
-                = link_to user_path(partner(@room)) do
-                  - if partner(@room).icon.url.present?
-                    = image_tag partner(@room).icon.url
-                  - else
-                    = image_tag 'egg-icon-gray.png'
-              .direct-message__show__messages__message__contents
-                - if message.body.present?
-                  = simple_format(message.body) 
-                - if message.image.present?
-                  = image_tag message.image.url
-            .direct-message__show__messages__date
-              = message.created_at
-        - else
-          .own-message
-            .direct-message__show__messages__message
+                = image_tag 'nouser.jpg'
               .direct-message__show__messages__message__contents
                 - if message.body.present?
                   = simple_format(message.body) 
