--- a/app/views/rooms/_room.html.haml
+++ b/app/views/rooms/_room.html.haml
@@ -1,15 +1,22 @@
 = link_to room_path(room), class: 'room' do
   .room__left
-    - if partner(room).icon.url.present?
-      = image_tag partner(room).icon.url, size: '40x40'
+    - if partner(room)
+      - if partner(room).icon.url.present?
+        = image_tag partner(room).icon.url, size: '40x40'
+      - else
+        = image_tag 'egg-icon-gray.png', size: '40x38'
     - else
-      = image_tag 'egg-icon-gray.png', size: '40x38'
+      = image_tag 'nouser.jpg', size: '40x38'
   .room__right
     .room__right__top
-      .room__right__top__name
-        = partner(room).name
-      .room__right__top__acountid
-        @#{partner(room).acountid}
+      - if partner(room)
+        .room__right__top__name
+          = partner(room).name
+        .room__right__top__acountid
+          @#{partner(room).acountid}
+      - else
+        .room__right__top__acountid
+          退会したユーザー
     .room__right__bottom
       - if room.messages.present?
         -# = simple_format(room.messages.last.body).sub!(/\n.*/m, "").slice(3..50)
