--- a/app/assets/stylesheets/layouts/footer.scss
+++ b/app/assets/stylesheets/layouts/footer.scss
@@ -1,13 +1,12 @@
 .footer {
-  // position: fixed !important;
-  // bottom: 0;
   height: 3em;
-  // border-top: solid 1px rgb(204, 204, 204);
   box-sizing: border-box;
   position:relative;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.6);
-  // background-color: rgb(253, 247, 241);
   &__container {
+    @media screen and (max-width:780px){
+      width: 100%;
+    } 
     width: 70%;
     margin: 0 auto;
     display: flex;
