--- a/app/assets/stylesheets/layouts/header.scss
+++ b/app/assets/stylesheets/layouts/header.scss
@@ -7,6 +7,9 @@
   border-bottom: solid 1px rgba(204, 204, 204, 0.6);
   box-shadow: 0px 0px 10px 0px rgba(68, 68, 68, 0.9);
   &__container {
+    @media screen and (max-width:780px){
+      width: 100%;
+    }    
     height: 100%;
     width: 70%;
     margin: 0 auto;
