--- a/app/views/shared/_itemsearchbox.html.haml
+++ b/app/views/shared/_itemsearchbox.html.haml
@@ -15,9 +15,9 @@
       .searchbox__form__select__list
         .searchbox__form__select__list__contents
           - Genre.all.each do |genre|
-            .searchbox__form__select__list__contents__content{data: {id: genre.id}}
+            .searchbox__form__select__list__contents__content.genre-content{data: {id: genre.id}}
               = genre.name
-    .searchbox__form__selected.form-selected
+    .searchbox__form__genre-selected.form-selected
     .searchbox__form__title
       キーワード検索
     .searchbox__form__search
