--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -18,7 +18,7 @@
             - else
               タイムライン
       -else
-        = link_to root_path do
+        = link_to user_session_path do
           .footer__container__content__timeline
             タイムライン
     .footer__container__content
@@ -31,6 +31,6 @@
             - else
               マイページ
       -else
-        = link_to root_path do
+        = link_to user_session_path do
           .footer__container__content__mypage
             マイページ
