--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -30,7 +30,7 @@
                   - if message.image.present?
                     = image_tag message.image.url
               .direct-message__show__messages__date
-                = message.created_at
+                = message.created_at.strftime("%Y/%m/%d %H:%M")
           - else
             .own-message
               .direct-message__show__messages__message
@@ -40,7 +40,7 @@
                   - if message.image.present?
                     = image_tag message.image.url
               .direct-message__show__messages__date
-                = message.created_at
+                = message.created_at.strftime("%Y/%m/%d %H:%M")
         - else
           .partner
             .direct-message__show__messages__message
@@ -52,8 +52,8 @@
                 - if message.image.present?
                   = image_tag message.image.url
             .direct-message__show__messages__date
-              = message.created_at
-    = form_with(url: room_messages_path(@room), local: true, class: 'direct-message__show__form') do |f|
+              = message.created_at.strftime("%Y/%m/%d %H:%M")
+    = form_with(url: room_messages_path(@room), local: true, class: 'direct-message__show__form', id: 'new_message') do |f|
       = f.label :image, class: 'direct-message__show__form__image' do
         = icon "far", "image", class: "image"
         = f.file_field :image, style: 'display:none;'
