--- a/app/views/users/search.html.haml
+++ b/app/views/users/search.html.haml
@@ -1,7 +1,7 @@
 .user-search.individual-page
   .user-search__head.individual-page__head
     .user-search__head__contents.individual-page__head__contents
-      = icon 'fas', 'store-alt', class: ''
+      = icon 'fas', 'user', class: ''
       - if @genders || @length || @minage || @maxage || @salon || @keyword
         %span
           - if @genders
