--- a/app/assets/stylesheets/layouts/header.scss
+++ b/app/assets/stylesheets/layouts/header.scss
@@ -24,10 +24,10 @@
           border-radius: 0.3em;
           font-size: 0.7em;
           width: 15rem;
-          background-color: rgba(255, 252, 248, 0.6);
+          background-color: rgb(248, 248, 248);
         }
         &__input::placeholder {
-          color:  #b4afa9;
+          color:  #9c9c9c;
         }
         &__button {
           position: absolute;
