--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -17,15 +17,19 @@
               - if @post.user.gender
                 |
                 = @post.user.gender.name
+            .show__header__user__left__contents__else__age
+              - if @post.user.age.present?
+                |
+                = @post.user.age
+            .show__header__user__left__contents__else__length
+              - if @post.user.length_id.present?
+                |
+                = @post.user.length.name
             - if @post.user.salon
+              |
               = link_to salon_path(@post.user.salon), class: 'show__header__user__left__contents__else__salon' do
                 = salon_name(@post.user.salon)
-            - else
-              - if user_signed_in? && current_user.id == @post.user.id
-                = link_to edit_user_registration_path(@post.user), class: 'show__header__user__left__contents__else__salon' do
-                  未登録
-              - else
-                未登録
+
       .show__header__user__right
         .show__header__user__right__follow
           - if user_signed_in?
@@ -68,14 +72,12 @@
           .show__contents__post__left__bottom__favorite.col-2
             - if user_signed_in?
               - if current_user.already_favorited?(@post)
-                -# = link_to post_favorite_path(@post), method: :delete, class: 'favorite-delete', id: "favorite-delete", remote: true, onclick: "favoritedeleteclick()" do
                 = link_to post_favorite_path(@post), method: :delete, class: 'favorite-delete', id: "favorite-delete" do
                   .show__contents__post__left__bottom__favorite__icon
                     = icon "fas",'heart', class: 'icon'
                   .show__contents__post__left__bottom__favorite__count
                     = @post.favorites.count
               - else
-                -# = link_to post_favorites_path(@post,@favorites), method: :post, class: 'favorite-create', id: "favorite-create", remote: true, onclick: "favoritecreateclick()" do
                 = link_to post_favorites_path(@post,@favorites), method: :post, class: 'favorite-create', id: "favorite-create" do
                   .show__contents__post__left__bottom__favorite__icon
                     = icon "far",'heart', class: 'icon'
@@ -87,20 +89,18 @@
         .show__contents__post__right__title
           = @post.title
         .show__contents__post__right__introduction
-          #{@post.length.name}
-          | 175cm
-          |
+          - if @post.length
+            #{@post.length.name}
           - if @post.gender
+            |
             #{@post.gender.name}
-            |
           - if @post.age
-            #{@post.age}
             |
+            #{@post.age}
           - if @post.salon
+            |
             = link_to salon_path(@post.salon), class: 'show__contents__post__right__introduction__salon' do
               = salon_name(@post.salon)
-          - else
-            未登録
           - if user_signed_in? && current_user.id == @post.user_id
             = link_to post_path(@post.id), method: :delete, data: { confirm: 'ほんとに消していいの？' }, class: 'show__contents__post__right__introduction__trash' do
               = icon "far", "trash-alt", class: "trash"
